Altera locais de estáticos

--- a/index.html
+++ b/index.html
@@ -3,21 +3,30 @@
 <head>
     <meta charset="utf-8">
     <title>Hello world</title>
-    <link rel="stylesheet" href="static/css/reveal.css">
-    <link rel="stylesheet" href="static/css/theme/league.css" id="theme">
+    <link rel="stylesheet" href="css/reveal.css">
+    <link rel="stylesheet" href="css/theme/default.css" id="theme">
 </head>
 <body>
     <div class="reveal">
         <div class="slides">
-            <section>Hello world</section>
             <section>
-                <section>Teste 1</section>
-                <section>Teste 2</section>
+                <h3>Descomplicando os mocks</h3>
+                <p>PythonRio XIV</p>
+                <p>29 de Outubro de 2016</p>
+            </section>
+            <section data-background="#dddddd">
+                <h2>Slide Backgrounds</h2>
+                <p>
+                    Set <code>data-background="#dddddd"</code> on a slide to change the background color. All CSS color formats are supported.
+                </p>
+                <a href="#" class="navigate-down">
+                    <img width="178" height="238" data-src="https://s3.amazonaws.com/hakim-reveal-js/arrow.png" alt="Down arrow">
+                </a>
             </section>
         </div>
     </div>
-<script src="static/js/head.min.js"></script>
-<script src="static/js/reveal.js"></script>
+<script src="lib/js/head.min.js"></script>
+<script src="js/reveal.js"></script>
 <script>
 
     // More info https://github.com/hakimel/reveal.js#configuration
